# rdf-toolkit-action

./: .gitignore  .gitmodules  .pre-commit-hooks.yaml  Dockerfile  Makefile  README.md  action.yml  entrypoint.sh  setup.cfg
.github/workflows/: build.yml  ci.yml  validate.yml
pre_commit_hooks/: normalize_rdf.py
