[metadata]
name = RDF Toolkit Normalizer
# NOTE - version is also recorded in a YAML snippet in README.md.
version = 0.3.0
description = A GitHub Action, Docker image, and pre-commit hook for normalizing RDF files with rdf-toolkit.jar.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/casework/rdf-toolkit-action
author = Keith Chason
license = Apache 2.0
license_files =
    LICENSE
    THIRD_PARTY_LICENSES.md
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    rdf-toolkit-normalizer = pre_commit_hooks.normalize_rdf:main

[options.extras_require]
testing =
    mypy
